src/297D-he1-052114/catherman/output-catherman.txt
src\catherman\makeChange.java:2: error: reached end of file while parsing
{
 ^
1 error
Error: Could not find or load main class SwapLetters
Error: Could not find or load main class SwapLetters
Error: Could not find or load main class SwapLetters
Error: Could not find or load main class MakeChange
Error: Could not find or load main class MakeChange
Error: Could not find or load main class MakeChange
